# yosys

./: .dockerignore  .gitignore  CMakeLists.txt  README_release.md  test_deb_exe.dockerfile  test_deb_lib.dockerfile
cmake/: install.cmake
passes/memory/: memlib.cc
techlibs/xilinx/: brams_xc4v.txt  lutrams_xcv.txt
tests/deb/: CMakeLists.txt  main.cpp  test_deb_exe.dockerfile  test_deb_lib.dockerfile  verilog_compiler.cpp  verilog_compiler.h
